# haskell-csv2

./: .gitlab-ci.yml  .stylish-haskell.yaml  Makefile  README.md  csv2.cabal  example.cabal
app/: Main.hs
files/: data.csv
src/: Lib.hs  Main.hs
