name:                 example
version:              0.2.0
synopsis:             Example to read a CSV file.
description:          Example project to read from a CSV file using Cassava.
homepage:             https://github.com/frankhjung/haskell-csv2#readme
license:              GPL-3
license-file:         LICENSE
author:               Frank H Jung
maintainer:           frankhjung@linux.com
copyright:            Copyright © 2021-2023 Frank H Jung
category:             education
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

source-repository     head
  type:               git
  location:           git@github.com:frankhjung/haskell-csv2.git

executable            example
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  ghc-options:       -Wall
                     -threaded
  build-depends:      base >= 4.7 && < 5
                    , cassava >= 0.5.3.0
                    , bytestring >= 0.11.4.0
                    , vector >= 0.12.3.1
